# pdf-md-bridge

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  main.cpp  pdf_to_md.py
docs/: gpl-compliance.md  wasm-deps.md
extension/: NOTICE.txt  manifest.json  popup.html  popup.js
scripts/: build-wasm.sh  poppler-emscripten.patch  sync-extension.sh
web/: app.js  converter-worker.js  index.html
